<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:title="@string/profil"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/change_pass"
        android:title="@string/ubah_sandi"
        app:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/change_id_job"
        android:title="@string/ubah_id_job"
        app:showAsAction="never"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/logout"
        android:title="@string/keluar"
        app:showAsAction="never"
        android:orderInCategory="4"/>
</menu>