<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UbahSandiActivity">

    <android.support.design.widget.TextInputEditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_old_pass"
        android:hint="@string/sandi_lama"
        android:maxLength="35"
        android:inputType="textPassword"/>

    <android.support.design.widget.TextInputEditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_new_pass"
        android:hint="@string/sandi_baru"
        android:maxLength="35"
        android:inputType="textPassword"/>

    <android.support.design.widget.TextInputEditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_new_pass_confirmation"
        android:hint="@string/konfirmasi_sandi"
        android:maxLength="35"
        android:inputType="textPassword"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_edit_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ubah_sandi"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/colorWhite"/>
</LinearLayout>