<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp" />
            <android.support.design.widget.TextInputEditText
                android:layout_below="@+id/input_email"
                android:id="@+id/input_password"
                android:hint="@string/kata_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp" />
            <android.support.v7.widget.AppCompatButton
                android:layout_below="@+id/input_password"
                android:textColor="@color/colorWhite"
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/masuk" />

            <android.support.v7.widget.AppCompatButton
                android:layout_below="@+id/btn_login"
                android:id="@+id/btn_daftar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/rounded_btn"
                android:text="@string/daftar"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>