<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:padding="20dp"
        android:background="#80FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distancetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/jarak_tempuh"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/speedtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/dot"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/target"
            android:textSize="14pt"
            android:text="..."
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/achieved_target"
            android:textSize="10pt"
            android:text="..."
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:paddingBottom="0dp"
                android:text="@string/mulai"
                android:background="@drawable/rounded_btn"
                android:textColor="@color/colorWhite"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/berhenti"
                android:visibility="gone"
                android:background="@drawable/rounded_btn"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
